changed colors and fixed resume route

--- a/src/style/sections/_contact.scss
+++ b/src/style/sections/_contact.scss
@@ -35,5 +35,12 @@
   }
 }
 .email-tag{
-  text-decoration: underline;
+  font-style: italic;
+  font-size: 2.5rem;
+}
+
+.phone-tag{
+  font-style: italic;
+  font-size: 2.5rem;
+  margin-bottom: -10px;
 }
