change details and color palette

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -5,7 +5,7 @@ $secondary-color: #52c234;
 // $primary-color: #7f449d;
 // $secondary-color: #793fc1;
 
-$white-color: #fff;
+$white-color: #fdfff0;
 
 $dark-grey: #333333;
 
