--- a/src/style/components/_buttons.scss
+++ b/src/style/components/_buttons.scss
@@ -62,11 +62,11 @@
 
 /* Resume Style */
 .cta-btn--resume {
-  color: $white-color;
-  border: 2px solid $white-color;
+  color: $dark-grey;
+  border: 2px solid $dark-grey;
 
   &::after {
-    background: $white-color;
+    background: $dark-grey;
   }
 
   &:hover {
