--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -5,7 +5,7 @@ $secondary-color: #ff9068;
 // $primary-color: #7f449d;
 // $secondary-color: #793fc1;
 
-$white-color: #fdfff0;
+$white-color: #f2eee4;
 
 $dark-grey: #333333;
 
